# seagull-engine

./: Cargo.toml  build.rs
src/: Display-FS.glsl  VS.glsl  handler.rs  main.rs  pixelate.rs
src/lib/: app.rs  effects.rs  extensions.rs  frame_buffer.rs  frame_buffer_object.rs  gl.rs  mod.rs  program.rs  shader.rs  texture.rs  vertex_array.rs  vertex_buffer.rs
src/lib/effects/: FS.glsl  mod.rs  pixelate.rs
src/pixelate/: mod.rs
src/voronoi/: FS.glsl  mod.rs
